fixing the customScrollbar.css

--- a/CSS/customScrollbar.css
+++ b/CSS/customScrollbar.css
@@ -34,10 +34,12 @@
 .Container {
 	height: 560px;
 	overflow-x: auto;
+	overflow-y: auto;
 }
 
 .Content {
-	height: 700px;
+	height: 560px;
+	overflow-x: auto;
 	overflow-y: auto;
 }
 
